HW2-Changes of errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,25 +72,25 @@ body {
   color: #434455;
 }
 .hero {
-  color: #ffffff;
-  background-color: #2e2f42;
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
   text-align: center;
 }
 
 .hero-title {
   color: #ffffff;
   background-color: #2e2f42;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 
 .button {
   color: #ffffff;
+  font-family: inherit;
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
-  /* line-height: 1.5; */
+  line-height: 1.5;
   align-items: center;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -110,7 +110,7 @@ body {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
-  /* letter-spacing: 0.02em; */
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
 .sub-title {
@@ -118,6 +118,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .team {
