--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ body {
   color: var(--primary-text-color);
 }
 .hero {
+  background-color: var(--secondary-bg-color);
   text-align: center;
 }
 
